# RNETSIM

./: .gitignore  ARCHITECTURE.md  Dockerfile.node  Dockerfile.visualizer  LICENSE  README.MD  README.md  dev.py  docker-compose.base.yaml  pyproject.toml
rnetsim/: __init__.py  __main__.py  cli.py  config.py
rnetsim/api/: __init__.py  app.py
rnetsim/api/models/: __init__.py  profile.py  scenario.py  simulation.py
rnetsim/api/routes/: profiles.py  scenarios.py  simulation.py  terrain.py
rnetsim/api/services/: __init__.py  profile_store.py  scenario_store.py  simulation_manager.py
rnetsim/api/ws/: __init__.py  realtime.py
rnetsim/fabric/: __init__.py  events.py  geography.py  inject.py  launch.py  link_model.py  radio_model.py  state.py  status.py  stop.py  tc_shaper.py  terrain.py
rnetsim/gateway/: __init__.py  bridge.py
rnetsim/node/: __init__.py  entrypoint.sh  health.py  telemetry.py
rnetsim/scenarios/: helene-response.yaml  heterogeneous.yaml  linear-chain.yaml  minimal.yaml  mountain-mesh.yaml  partition-heal.yaml  sleep-wake.yaml  star.yaml  stress-100.yaml
tests/: conftest.py  test_api_profiles.py  test_api_scenarios.py  test_api_simulation.py  test_events.py  test_gateway.py  test_geography.py  test_link_model.py  test_profiles.py  test_radio_model.py  test_scenario_model.py  test_tc_shaper.py  test_topology.py
web/: cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/cypress/: tsconfig.json
web/cypress/e2e/: builder.cy.ts  (+6 more)
web/public/: rnetsim.id
web/src/: App.tsx
(+35 files in other folders)
